--- a/frontend/static/themes_client/css/style.css
+++ b/frontend/static/themes_client/css/style.css
@@ -901,7 +901,7 @@ a:hover {
 }
 
 .text-dark a:hover {
-  color: #007bff; /* Couleur des liens au survol */
+  color: #03BB00; /* Couleur des liens au survol */
 }
 
 
