--- a/frontend/templates/themes_admin/edit_profile.html
+++ b/frontend/templates/themes_admin/edit_profile.html
@@ -14,13 +14,15 @@
                         Modifier mon profil
                     </div>
                 </div>
+                <br>
+                <br>
                 <div class="card-body">
                     <div class="row">
                         <div class="col-lg-6">
                             <form class="needs-validation" novalidate method="POST" action="{% url 'edit_profile' %}">
                                 {% csrf_token %}
                                 <div class="form-group">
-                                    <label for="first_name">Name</label>
+                                    <label for="first_name">Nom</label>
                                     <input type="text" class="form-control" id="first_name" name="first_name" value="{{ name }}" required>
                                     <div class="invalid-feedback">
                                         Ce champ est obligatoire.
@@ -34,31 +36,31 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="mobile">Phone</label>
+                                    <label for="mobile">Téléphone</label>
                                     <input type="text" class="form-control" id="mobile" name="mobile" value="{{ mobile }}" minlength="10" onkeypress="return onlyNumberKey(event)" required>
                                     <div class="invalid-feedback">
                                         Veuillez saisir un numéro de téléphone valide.
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="address">Address</label>
+                                    <label for="address">Adresse</label>
                                     <input type="text" class="form-control" id="address" name="address" value="{{ address }}" required>
                                     <div class="invalid-feedback">
-                                        This field is required.
+                                        Ce champ es obligatoire
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="old_password">Old Password</label>
+                                    <label for="old_password">Ancien mot de passe</label>
                                     <input type="password" class="form-control" id="old_password" name="old_password" required>
                                     <div class="invalid-feedback">
-                                        This field is required.
+                                        Veuillez saisir votre ancien mot de passe
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="new_password">New Password</label>
+                                    <label for="new_password">Nouveau mot de passe</label>
                                     <input type="password" class="form-control" id="new_password" name="new_password" required>
                                     <div class="invalid-feedback">
-                                        Ce champ est obligatoire.
+                                        Veuillez saisir votre nouveau mot de passe
                                     </div>
                                 </div>
                                 <button type="submit" class="btn float-right btn-list">Modifier</button>
