--- a/frontend/templates/themes_admin/themes_pharmacien/affichage_med_grid.html
+++ b/frontend/templates/themes_admin/themes_pharmacien/affichage_med_grid.html
@@ -44,7 +44,7 @@
                                     
                                     <div class="card-footer">
                                         <a href="{% url 'pharmacien_show_details' medicament.id %}" class="d-flex align-items-center show-detail">
-                                            <span class="mr-2">Show Details</span>
+                                            <span class="mr-2">Voir Détails</span>
                                             <span><i class="fas fa-angle-right"></i></span>
                                         </a>
                                     </div>
