--- a/frontend/templates/themes_admin/themes_pharmacien/commandes_list.html
+++ b/frontend/templates/themes_admin/themes_pharmacien/commandes_list.html
@@ -1,7 +1,121 @@
 {% extends "themes_admin/themes_pharmacien/medicine_list.html" %}
 {% block content %}
+<style>
+    body {
+        font-family: 'Arial', sans-serif;
+        background-color: #f4f4f9;
+        margin: 0;
+        padding: 0;
+        display: flex-box !important;
+    }
+    .container {
+        max-width: 1200px;
+        margin: 20px auto;
+        padding: 20px;
+        background-color: #fff;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+    }
+    h2 {
+        text-align: center;
+        margin-bottom: 25px;
+        color: #03BB00;
+        font-size: 2.5em;
+        font-weight: bold;
+    }
+    .table {
+        width: 100%;
+        margin-bottom: 1rem;
+        background-color: #fff;
+        border-collapse: collapse;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+        overflow: hidden;
+    }
+    .table th, .table td {
+        padding: 12px 15px;
+        vertical-align: middle;
+        border-top: 1px solid #dee2e6;
+        font-size: 1.8em; /* Augmente la taille de la police des cellules */
+    }
+    .table thead th {
+        background-color: #03BB00;
+        font-weight: bold;
+        color: #fff;
+        border-bottom: 2px solid #dee2e6;
+        text-align: center;
+        font-size: 1.8em; /* Augmente la taille de la police des en-têtes */
+    }
+    .table tbody tr:nth-of-type(odd) {
+        background-color: #f2f2f2;
+    }
+    .table tbody tr:hover {
+        background-color: #e9ecef;
+    }
+    .table-bordered {
+        border: 1px solid #dee2e6;
+    }
+    .table-bordered th, .table-bordered td {
+        border: 1px solid #dee2e6;
+    }
+    .table-validation {
+        background-color: #f8d7da;
+        color: #721c24;
+        font-weight: bold;
+        text-align: center;
+    }
+    .table-validation-valid {
+        background-color: #d4edda;
+        color: #155724;
+        font-weight: bold;
+        text-align: center;
+        font-size: 1.2em; /* Augmente la taille de la police des états de validation */
+    }
+    ul {
+        padding-left: 20px;
+    }
+    li {
+        margin-bottom: 5px;
+    }
+    .btn {
+        display: inline-block;
+        font-weight: 400;
+        color: #212529;
+        text-align: center;
+        vertical-align: middle;
+        cursor: pointer;
+        background-color: transparent;
+        border: 1px solid transparent;
+        padding: 0.375rem 0.75rem;
+        font-size: 1.8rem;
+        line-height: 1.5;
+        border-radius: 0.25rem;
+        transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    }
+    .btn-primary {
+        color: #fff;
+        background-color: #03BB00;
+        border-color: #fff;
+    }
+    .btn-primary:hover {
+        color: #fff;
+        background-color: #0056b3;
+        border-color: #004085;
+    }
+    .btn-secondary {
+        color: #fff;
+        background-color: #6c757d;
+        border-color: #6c757d;
+    }
+    .btn-secondary:hover {
+        color: #fff;
+        background-color: #545b62;
+        border-color: #4e555b;
+    }
+</style>
+
 <div class="container">
-    <h2>Journal des Commandes </h2>
+    <h2>Journal des Commandes</h2>
     <table class="table table-bordered">
         <thead>
             <tr>
@@ -17,14 +131,26 @@
                 <td>
                     <ul>
                         {% for med in selection.donnees %}
-                        <li>{{ med.nom }} - {{ med.prix }} - Quantité: {{ med.quantite }}</li>
+                        <li>{{ med.nom }} - {{ med.prix }}  - Quantité: {{ med.quantite }}</li>
                         {% endfor %}
                     </ul>
                 </td>
-                <td>{{ selection.etatDeValidation|yesno:"Validé,Non Validé" }}</td>
+                <td class="table-validation {% if selection.etatDeValidation %}table-validation-valid{% endif %}">
+                    {{ selection.etatDeValidation|yesno:"Validé,Non Validé" }}
+                </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
+    <div class="text-center">
+        <button id="addOrderBtn" class="btn btn-primary">Ajouter une Commande</button>
+        <button class="btn btn-secondary">Annuler</button>
+    </div>
 </div>
+
+<script>
+    document.getElementById('addOrderBtn').addEventListener('click', function() {
+        window.location.href = "{% url 'pharamacien_listeMedicament' %}";
+    });
+</script>
 {% endblock content %}
