--- a/frontend/templates/themes_client/contact.html
+++ b/frontend/templates/themes_client/contact.html
@@ -10,7 +10,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 mb-0">
-            <a href="index.html">Home</a> <span class="mx-2 mb-0">/</span>
+            <a href="index.html">Acceuil</a> <span class="mx-2 mb-0">/</span>
             <strong class="text-black">Contact</strong>
           </div>
         </div>
@@ -21,7 +21,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="h3 mb-5 text-black">Get In Touch</h2>
+            <h2 class="h3 mb-5 text-black">Contactez-nous</h2>
           </div>
           <div class="col-md-12">
     
@@ -30,11 +30,11 @@
               <div class="p-3 p-lg-5 border">
                 <div class="form-group row">
                   <div class="col-md-6">
-                    <label for="c_fname" class="text-black">First Name <span class="text-danger">*</span></label>
+                    <label for="c_fname" class="text-black">Nom <span class="text-danger">*</span></label>
                     <input type="text" class="form-control" id="c_fname" name="c_fname">
                   </div>
                   <div class="col-md-6">
-                    <label for="c_lname" class="text-black">Last Name <span class="text-danger">*</span></label>
+                    <label for="c_lname" class="text-black">Prénoms <span class="text-danger">*</span></label>
                     <input type="text" class="form-control" id="c_lname" name="c_lname">
                   </div>
                 </div>
@@ -46,7 +46,7 @@
                 </div>
                 <div class="form-group row">
                   <div class="col-md-12">
-                    <label for="c_subject" class="text-black">Subject </label>
+                    <label for="c_subject" class="text-black">Objet </label>
                     <input type="text" class="form-control" id="c_subject" name="c_subject">
                   </div>
                 </div>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="form-group row">
                   <div class="col-lg-12">
-                    <input type="submit" class="btn btn-primary btn-lg btn-block" value="Send Message">
+                    <input type="submit" class="btn btn-primary btn-lg btn-block" value="Envoyer">
                   </div>
                 </div>
               </div>
