--- a/frontend/templates/themes_client/index.html
+++ b/frontend/templates/themes_client/index.html
@@ -9,6 +9,8 @@
 
   <link href="https://fonts.googleapis.com/css?family=Rubik:400,700|Crimson+Text:400,400i" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'themes_client/fonts/icomoon/style.css' %}">
+  
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
 
   <link rel="stylesheet" href="{% static 'themes_client/css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'themes_client/css/magnific-popup.css' %}">
