--- a/frontend/templates/themes_client/shop-single.html
+++ b/frontend/templates/themes_client/shop-single.html
@@ -71,7 +71,7 @@
             
             
             
-                  <form action="{% url 'upload_ordonnance' %}" method="post" enctype="multipart/form-data" id="uploadForm">
+                  <form action="#" method="post" enctype="multipart/form-data" id="uploadForm">
                     {% csrf_token %}
                     <p>
                         <button type="button" class="btn btn-sm height-auto px-4 py-3 btn-primary" onclick="document.getElementById('cameraInput').click();">
