--- a/frontend/templates/themes_admin/edit_category.html
+++ b/frontend/templates/themes_admin/edit_category.html
@@ -214,7 +214,7 @@
                             </div>
                             <div class="user-wrapper">
 
-                                <a class="content a-user dropdown-item" href="{% url 'my_profile' %}" id="a-user">
+                                <a class="content a-user dropdown-item" href="{% url 'profil_utilisateur' %}" id="a-user">
 
                                     <div class="drop-item">
                                         <div class="row row-user" style="margin-bottom: -2px;">
