--- a/frontend/templates/themes_client/index.html
+++ b/frontend/templates/themes_client/index.html
@@ -9,9 +9,13 @@
 
   <link href="https://fonts.googleapis.com/css?family=Rubik:400,700|Crimson+Text:400,400i" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'themes_client/fonts/icomoon/style.css' %}">
-  
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+     crossorigin="">
+  </script>
   <link rel="stylesheet" href="{% static 'themes_client/css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'themes_client/css/magnific-popup.css' %}">
   <link rel="stylesheet" href="{% static 'themes_client/css/jquery-ui.css' %}">
@@ -62,7 +66,7 @@
               <ul class="site-menu js-clone-nav d-none d-lg-block">
                 <li class="active"><a href="{% url 'liste_medicaments_client' %}">Acceuil</a></li>
                 <li><a href="{% url 'shop' %}">Boutique</a></li>
-                <li><a href="{% url 'inscription_client' %}">Commander</a></li>
+                <li><a href="{% url 'redirection_commande' %}">Commander</a></li>
                 <li><a href="{% url 'about' %}">A Propos De Nous</a></li>
                 <li><a href="{% url 'contact' %}">Contact</a></li>
               </ul>
@@ -77,6 +81,44 @@
             <a href="#" class="site-menu-toggle js-menu-toggle ml-3 d-inline-block d-lg-none"><span
                 class="icon-menu"></span></a>
           </div>
+          <div class="user dropdown d-flex" id="user">
+            {% if request.session.user_name and request.session.user_email %}
+                <!-- User is logged in -->
+                <a role="button" data-toggle="dropdown" data-target="#" href="">
+                    <i class="bi bi-person-fill"></i>
+                    <span>Déconnexion</span>
+                </a>
+
+                <ul class="dropdown-menu user-profile" role="menu" aria-labelledby="dLabel">
+                    <div class="user-heading">
+                        <div class="user-name2">{{ request.session.user_name }}</div>
+                        <div class="user-email2">{{ request.session.user_email }}</div>
+                    </div>
+                    <div class="user-wrapper">
+                        <li class="divider"></li>
+                        <a class="content a-sign dropdown-item" href="{% url 'deconnexion' %}" id="a-user">
+                            <div class="drop-item">
+                                <div class="row row-user" style="margin-top: 5px">
+                                    <div class="">
+                                        <i class="fa fa-sign-out" id="fa-sign"></i>
+                                    </div>
+                                    <div class="p-user">
+                                        <p>Déconnexion</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </ul>
+            {% else %}
+                <!-- User is not logged in -->
+                <a href="{% url 'page_connexion' %}">
+                    <i class="bi bi-person-fill"></i>
+                    <span>Connexion</span>
+                </a>
+            {% endif %}
+        </div>
+
         </div>
       </div>
     </div>
