Formulaire de commande virtuelle fonctionnel

--- a/frontend/templates/themes_client/formulaire_commande.html
+++ b/frontend/templates/themes_client/formulaire_commande.html
@@ -37,17 +37,44 @@
         <div id="map"></div>
         <input type="hidden" id="id_geolocalisation" name="geolocalisation">
         <script>
-            var map = L.map('map').setView([51.505, -0.09], 13);
-            L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-                maxZoom: 19,
-                attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-            }).addTo(map);
-            var marker = L.marker([51.505, -0.09]).addTo(map);
-            map.on('click', function(e) {
-                marker.setLatLng(e.latlng);
-                document.getElementById('id_geolocalisation').value = e.latlng.lat + ',' + e.latlng.lng;
-            });
+            // Fonction pour initialiser la carte
+            function initializeMap(lat, lng) {
+                var map = L.map('map').setView([lat, lng], 13);
+                L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                    maxZoom: 19,
+                    attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+                }).addTo(map);
+                var marker = L.marker([lat, lng]).addTo(map);
+                map.on('click', function(e) {
+                    marker.setLatLng(e.latlng);
+                    document.getElementById('id_geolocalisation').value = e.latlng.lat + ',' + e.latlng.lng;
+                });
+            }
+        
+            // Fonction pour obtenir la position actuelle
+            function getCurrentPosition() {
+                if (navigator.geolocation) {
+                    navigator.geolocation.getCurrentPosition(function(position) {
+                        var lat = position.coords.latitude;
+                        var lng = position.coords.longitude;
+                        initializeMap(lat, lng);
+                        document.getElementById('id_geolocalisation').value = lat + ',' + lng;
+                    }, function() {
+                        // En cas d'erreur de géolocalisation
+                        alert("Impossible de récupérer votre position. La carte sera centrée sur une position par défaut.");
+                        initializeMap(6.229350438061403, 1.2016786235635935); // Position par défaut si géolocalisation échoue
+                    });
+                } else {
+                    // La géolocalisation n'est pas supportée par le navigateur
+                    alert("Votre navigateur ne supporte pas la géolocalisation. La carte sera centrée sur une position par défaut.");
+                    initializeMap(6.229350438061403, 1.2016786235635935); // Position par défaut
+                }
+            }
+        
+            // Appel de la fonction pour obtenir la position actuelle
+            getCurrentPosition();
         </script>
+        
     </div>
     <div>
         {{ form.consentement }} {{ form.consentement.label_tag }}
@@ -57,11 +84,11 @@
         <div class="payment-options">
             <label>
                 <input type="radio" name="mode_paiement" value="tmoney">
-                <img src="{% static 'images/tmoney.png' %}" alt="Tmoney">
+                <img src="{% static 'themes_client/images/tmoney.png' %}" alt="Tmoney">
             </label>
             <label>
                 <input type="radio" name="mode_paiement" value="flooz">
-                <img src="{% static 'images/flooz.png' %}" alt="Flooz">
+                <img src="{% static 'themes_client/images/flooz.png' %}" alt="Flooz">
             </label>
         </div>
     </div>
